<?xml version="1.0"?>
<package format="2">
  <name>rosjava_messages</name>
  <version>0.3.1</version>
  <description>
    Message generation for rosjava.
  </description>
  <url type="website">http://ros.org/wiki/rosjava_messages</url>
  <url type="repository">https://github.com/rosjava/rosjava_messages</url>
  <url type="bugtracker">https://github.com/rosjava/rosjava_messages/issues</url>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <author>Daniel Stonier</author>
  <author>Damon Kohler</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rosjava_build_tools</depend>
  <depend>genjava</depend>

  
  <depend>roscpp</depend>           

  
</package>
